--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   image_picker: ^0.8.4+11
   shared_preferences: ^2.0.13
   url_launcher: ^6.0.20
+  provider: ^5.0.0
+  
 
 dev_dependencies:
   flutter_test:
