--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,7 +85,7 @@ flutter:
     - assets/ic_logo-2.png
     - assets/tiresoft-background.jpg
     - assets/persona.png
-  #   - images/a_dot_ham.jpeg
+    - assets/fondo-login.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
