--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,9 +76,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/llanta1.jpg
-    - assets/llanta2.jpg
-    - assets/llanta3.jpg
+    - assets/neumatico1.jpg
+    - assets/neumatico2.jpg
+    - assets/neumatico3.jpg
     - assets/logotiresoftb.png
     - assets/fondo-1.jpg
     - assets/LOGO-tiresoft-login.png
